JDK17 Migration: Downgrade OpenMRS version to 2.6.1 for compatibility with Liquibase 4.8.0 and POI 4.1.2