@@ -15,7 +15,7 @@
         <jackson.version>2.17.0</jackson.version>
         <skipDump>true</skipDump>
         <skipConfig>true</skipConfig>
-        <openMRSVersion>2.7.4</openMRSVersion>
+        <openMRSVersion>2.6.1</openMRSVersion>
         <log4jVersion>2.23.1</log4jVersion>
         <bahmniJavaUtils.version>1.0.0</bahmniJavaUtils.version>
         <junitVersion>4.13.2</junitVersion>
@@ -555,6 +555,38 @@
     </repositories>
 
     <profiles>
+        <profile>
+            <id>unit-test</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.18.1</version>
+                        <configuration>
+                            <argLine>-Xmx1024m -XX:MaxMetaspaceSize=2056m</argLine>
+                            <includes>
+                                <include>**/*Test.java</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/integrationtests/*.java</exclude>
+                                <exclude>**/report/*.java</exclude>
+                                <exclude>**/template/SqlReportTemplateTest.java</exclude>
+                            </excludes>
+                            <argLine>
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                                --add-opens java.base/java.nio=ALL-UNNAMED
+                                --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                                --add-opens java.xml/org.w3c.dom=ALL-UNNAMED
+                                --add-opens java.xml/javax.xml.parsers=ALL-UNNAMED
+                                --add-opens java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED
+                                --add-modules java.desktop
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>Windows</id>
             <activation>
